--- a/apps/front-end/public/locales/hi/translation.json
+++ b/apps/front-end/public/locales/hi/translation.json
@@ -1072,5 +1072,12 @@
   "YOUR_HIGHEST_QUALIFICATION": "आपका सबसे उच्च शिक्षण",
   "YOUR_IP_WILL_SHARE_DETAILS_SOON": "आपका IP जल्द ही विवरण साझा करेगा",
   "YOUR_PROFILE": "आपका प्रोफ़ाइल",
-  "YOUR_WORK_AVAILABILITY_WILL_BE": "आपके काम की क्या उपलब्धता रहेगी ?"
+  "YOUR_WORK_AVAILABILITY_WILL_BE": "आपके काम की क्या उपलब्धता रहेगी ?",
+  "TYPE_OF_CAMPSITE ": "शिविर स्थल का प्रकार ",
+  "INACTIVE_GOVERNMENT_PRIVATE_SCHOOL": "निष्क्रिय सरकारी/निजी स्कूल",
+  "GOT_THE_KIT": "किट मिला।",
+  "IS_THE_KIT_USEFUL": "क्या किट उपयोगी है?",
+  "SUGGESTIONS_FOR_THE_KIT": "किट के लिए सुझाव",
+  "THE_FOLLOWING_FACILITIES_ARE_AVAILABLE_AT_THE_CAMP_SITE": "शिविर स्थल पर निम्नलिखित सुविधाएं उपलब्ध हैं।",
+  "PLEASE_NOTE_THAT_THE_FOLLOWING_CHANGES_ARE_AVAILBLE": "कृपया आवश्यक परिवर्तन के लिए प्रेरक को सूचित करे "
 }
