--- a/apps/front-end/public/locales/hi/translation.json
+++ b/apps/front-end/public/locales/hi/translation.json
@@ -35,6 +35,7 @@
   "ACTION": "एक्शन",
   "ADD": "जोड़ें",
   "ADD_A_PRERAK": "प्रेरक जोड़ें",
+  "ADD_PARTICIPANTS": "ऍड पार्टीसिपेंट्स",
   "ADD_A_REFERENCE": "एक संदर्भ जोड़ें",
   "ADD_AADHAAR_NUMBER": "आधार संख्या जोड़ें",
   "ADD_AADHAAR_NUMBER_ERROR_MESSAGE": "सबसे पहले अपना आधार संख्या दर्ज करें और फिर आधार संख्या केवाईसी पर आगे बढ़ें।",
@@ -263,7 +264,6 @@
   "CASTE_CERTIFICATE ": "जाति प्रमाणपत्र ",
   "CBOSIGN": "CBO द्वारा प्रमाणित  मार्कशीट",
   "CBOSIGNTRANSFER": "CBO द्वारा प्रमाणित ट्रांसफर सर्टिफिकेट",
-  "CERTIFICATION": "प्रमाणपत्र",
   "CHANGE_MY_PASSWORD": "मेरा पासवर्ड बदलें",
   "CHANGE_REQUIRED": "बदलाव की आवश्यकता",
   "CHANGES_NEEDED": "बदलावों की जरूरत",
@@ -391,7 +391,6 @@
   "DONT_CLOSE_SCREEN": "इस स्क्रीन को बंद न करें। कैंप  के अंत में हमें आज का अनुभव ज़रूर साझा करें",
   "DONT_HAVE_AN_ACCOUNT": "खाता नहीं है?",
   "DONTS": "नहीं",
-  "DOWNLOAD": "डाउनलोड",
   "DROPOUT": "ड्रॉपआउट",
   "DROPOUT_REASONS_COMMUNITY_ISSUE": "सामुदायिक समस्या",
   "DROPOUT_REASONS_FAMILY_ISSUE": "परिवारिक समस्या",
@@ -551,7 +550,6 @@
   "FACILITIES": "सुविधाएँ",
   "FACILITIES_AT_CAMP": "शिविर स्थल पर इनमें से कौन सी सुविधा उपलब्ध है?",
   "FAILED_TO_ASSIGN": "नियत करने में विफल, कृपया फिर से प्रयास करें",
-  "FAILED": "असफल",
   "FAMILY": "परिवार",
   "FAMILY_CONSENT": "परिवार की सहमति",
   "FAMILY_DETAILS": "परिवार का विवरण",
@@ -1139,8 +1137,8 @@
   "STREAM_2_(MAINSTREAM_SYC)": "स्ट्रीम 2 मेनस्ट्रीम SYC",
   "STREET_ADDRESS": "विस्तृत आवासीय पता",
   "STUDY_ROOM": "अध्ययन कक्ष",
-  "SUBJECTS": "विषयों",
   "SUBMIT": "प्रस्तुत करें",
+  "SUBJECTS": "विषयों",
   "SUBMIT_FOR_REGISTRATION": "रजिस्ट्रेशन के लिए प्रस्तुत करें",
   "SUGGESTIONS_FOR_THE_KIT": "किट के लिए सुझाव",
   "SUPPORT_FOR_EXPLAINING_THE_IMPORTANCE_OF_EDUCATION_TO_THE_FAMILY_MEMBERS": "घर वालों को पढाई का महत्व समझाने में",
@@ -1320,11 +1318,5 @@
   "YOUR_IP_WILL_SHARE_DETAILS_SOON": "आपका IP जल्द ही विवरण साझा करेगा",
   "YOUR_PROFILE": "आपका प्रोफ़ाइल",
   "YOUR_WELCOME_READY_TO_FLY": "आपका स्वागत है ! क्या आप सपनो की उड़ान भरने के लिए तैयार है?",
-  "YOUR_WORK_AVAILABILITY_WILL_BE": "आपके काम की क्या उपलब्धता रहेगी ?",
-  "SR_NO": "सीनियर नं.",
-  "PURPOSE": "लक्ष्य",
-  "SCORE": "स्‍कोर",
-  "STATUS": "स्थिति",
-  "MISSILINEOUS_SUCCESS_MESSAGE": "विविध गतिविधियाँ सफलतापूर्वक गईं",
   "YOUR_WORK_AVAILABILITY_WILL_BE": "आपके काम की क्या उपलब्धता रहेगी ?"
 }
